<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.warbler.connexus.SignActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="406dp"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/titleHeight"
            android:gravity="center_horizontal"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/titleSize"
            android:text="@string/title" />

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="@dimen/signButtonWidth"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/signMarginTop"
            android:background="@drawable/button"
            android:text="@string/signOutButton"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="@dimen/signButtonWidth"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/signMarginTop"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/view_streams"
            android:layout_width="@dimen/viewStreamsWidth"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/signMarginTop"
            android:background="@drawable/button"
            android:text="@string/viewStreamsButton"/>

        <TextView
            android:id="@+id/introduction"
            android:layout_width="@dimen/introductionWidth"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/textMarginTop"
            android:text="@string/introductionApp" />

        <TextView
            android:id="@+id/status"
            android:layout_marginTop="@dimen/textMarginTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/signStatus" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
