<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <FrameLayout
        android:id="@+id/camera_preview"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/take_picture"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:drawableTop="@android:drawable/ic_menu_camera"
            android:padding="16dp"
            android:text="@string/takePictureBtn"
            android:textSize="24sp"
            android:layout_weight="1"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/use_this_picture"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:padding="16dp"
            android:text="@string/usePictureBtn"
            android:drawableTop="@drawable/ic_thumb_up"
            android:textSize="24sp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:clickable="false"
            android:alpha="0.5"
            android:onClick="useThisPhoto"
            />

    </LinearLayout>

    <Button
        android:id="@+id/return_to_streams"
        android:text="@string/backToAllStreamsBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:layout_gravity="center"
        android:onClick="toAllStreamsActivity"
        />
</LinearLayout>